Added a circular progress library and themed it a bit - now just need to bind the user steps with the progressbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
   <string name="app_name">Stride</string>
   <string name="action_settings">Settings</string>
+
+  <!-- Dashboard -->
+  <string name="dashboard_steps_today">steps today</string>
 </resources>
