Added decimal separator in StringUtil, a calories helper and some steps information on the dashboard

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
 
   <!-- Dashboard -->
   <string name="dashboard_steps_today">steps today</string>
+  <string name="dashboard_goal">Goal: %s</string>
+  <string name="dashboard_calories">%s calories burnt today</string>
+  <string name="dashboard_steps_yesterday">%s steps yesterday</string>
 </resources>
