--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
   <string name="dashboard_goal">Goal: %s</string>
   <string name="dashboard_calories">%s calories burnt today</string>
   <string name="dashboard_steps_yesterday">%s steps yesterday</string>
+  <string name="dashboard_set_a_goal">Set a daily goal</string>
+  <string name="dashboard_daily_goal_option_one">10,000</string>
+  <string name="dashboard_daily_goal_option_two">15,000</string>
+  <string name="dashboard_daily_goal_option_three">25,000</string>
+
 </resources>
