--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
   <string name="achievements_burn1_description">Burn 500 calories in one day!</string>
   <string name="achievements_ads_title">Goodbye annoyance</string>
   <string name="achievements_ads_description">Upgrade to Premium and remove those pesky ads!</string>
+  <string name="achievements_not_achieved">Not yet achieved</string>
 
 </resources>
