--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,10 +17,20 @@
   <string name="achievements_count">%1$s/%2$s</string>
   <string name="achievements_walk1_title">Beginner Walker</string>
   <string name="achievements_walk1_description">Walk 5000 steps in one day!</string>
-  <string name="achievements_burn1_title">Burner</string>
+  <string name="achievements_walk2_title">Intermediate Walker</string>
+  <string name="achievements_walk2_description">Walk 15000 steps in one day!</string>
+  <string name="achievements_burn1_title">Beginner Burner</string>
   <string name="achievements_burn1_description">Burn 500 calories in one day!</string>
-  <string name="achievements_ads_title">Goodbye annoyance</string>
+  <string name="achievements_burn2_title">Intermediate Burner</string>
+  <string name="achievements_burn2_description">Burn 2000 calories in one day!</string>
+  <string name="achievements_ads_title">Goodbye ads</string>
   <string name="achievements_ads_description">Upgrade to Premium and remove those pesky ads!</string>
+  <string name="achievements_set_goal_title">Set a goal</string>
+  <string name="achievements_set_goal_description">Set a goal over on the main dashboard and have some motivation to get out and walk every day!</string>
+  <string name="achievements_reach_goal_title">Now reach it</string>
+  <string name="achievements_reach_goal_description">Complete your daily goal for one day</string>
+  <string name="achievements_custom_goal_title">Be creative</string>
+  <string name="achievements_custom_goal_description">Come up with your own goal and set it</string>
   <string name="achievements_not_achieved">Not yet achieved</string>
 
 </resources>
