Determine when a achievement is reached and store in preferences that it has been. Also store the date it was reached so we can display on the UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,6 @@
   <string name="achievements_custom_goal_title">Be creative</string>
   <string name="achievements_custom_goal_description">Come up with your own goal and set it</string>
   <string name="achievements_not_achieved">Not yet achieved</string>
+  <string name="achievements_date_achieved">Achieved: %s</string>
 
 </resources>
