--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
   <string name="app_name">Stride</string>
+  <string name="action_upgrade_to_pro">Remove ads</string>
   <string name="action_settings">Settings</string>
 
   <!-- Dashboard -->
@@ -33,5 +34,8 @@
   <string name="achievements_custom_goal_description">Come up with your own goal and set it</string>
   <string name="achievements_not_achieved">Not yet achieved</string>
   <string name="achievements_date_achieved">Achieved: %s</string>
+
+  <!-- Payment -->
+  <string name="main_screen_one_off_payment">Finalising your payment…</string>
 
 </resources>
