Some general UI tweaks, like adding bold orange text to the number for results

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
   <string name="dashboard_daily_goal_option_two">15,000</string>
   <string name="dashboard_daily_goal_option_three">25,000</string>
   <string name="dashboard_daily_goal_custom">Other</string>
+  <string name="dashboard_daily_goal_complete">Goal Complete!</string>
 
   <!-- Achievements -->
   <string name="achievements_title">Achievements</string>
