Implement the ProgressHistory tab along with the GridView, Adapter and entire UI - all hardcoded data for now.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,7 @@
   <!-- Widget -->
   <string name="widget_current_steps">Current steps %s</string>
 
+  <!-- Progress History -->
+  <string name="progress_history_steps">%s s</string>
+
 </resources>
