No Longer hardcoded date for ProgressHistory - get all the dates/steps and create a ProgressHistory list from the DB

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,6 @@
 
   <!-- Progress History -->
   <string name="progress_history_steps">%s s</string>
+  <string name="progress_no_history">No previous history</string>
 
 </resources>
